--- a/public/new.html
+++ b/public/new.html
@@ -215,7 +215,7 @@ textarea{
    </tbody>
   </table>
 
-  <div class="no_display_on_prod" id="result"></div>
+  <div id="result"></div>
   <textarea id="textarea"></textarea>
   <div class="no_display_on_prod" id="debug"></div>
  </div>
