--- a/public/new.html
+++ b/public/new.html
@@ -215,8 +215,10 @@ textarea{
    </tbody>
   </table>
 
+  <div>
+    <textarea id="textarea"></textarea>
+  </div>
   <div id="result"></div>
-  <textarea id="textarea"></textarea>
   <div class="no_display_on_prod" id="debug"></div>
  </div>
 </div>
