--- a/public/new.html
+++ b/public/new.html
@@ -50,34 +50,40 @@ function touchEnd( e ){
     ctx.fillStyle = "rgb( 255, 255, 255 )";
     ctx.fillRect( 0, 0, 200, 200 );
 
-    //. 最初のデータ
-    var abg = touchData[0];
+    //. 最後のデータ
+    var abg = touchData[touchData.length-1];
     var x = abg['lr'];
     var y = abg['fb'];
 
+    ctx.beginPath();
+    ctx.fillStyle = "rgb( 255, 0, 0 )";
+    ctx.arc( 2 * x + 100, -2 * y + 100, 10, 0, Math.PI * 2, true );
+    ctx.fill();
+
+    //. 最初のデータ
+    abg = touchData[0];
+    x = abg['lr'];
+    y = abg['fb'];
+
+    ctx.beginPath();
     ctx.fillStyle = "rgb( 0, 255, 0 )";
-    ctx.arc( 2 * x + 100, -2 * y + 100, 5, 0, Math.PI * 2, true );
+    ctx.arc( 2 * x + 100, -2 * y + 100, 10, 0, Math.PI * 2, true );
     ctx.fill();
 
     //. 始点をマーク
     ctx.beginPath();
     ctx.strokeStyle = "rgb( 0, 0, 0 )";
+    ctx.lineWidth = 5;
     ctx.moveTo( 2 * x + 100 , -2 * y + 100 );
 
     //. ２つ目以降のデータ
     for( var i = 1; i < touchData.length; i ++ ){
-      var abg = touchData[i];
+      abg = touchData[i];
       x = abg['lr'];
       y = abg['fb'];
       ctx.lineTo( 2 * x + 100 , -2 * y + 100 );
     }
     ctx.stroke();
-
-    //. 終点をマーク
-    ctx.beginPath();
-    ctx.fillStyle = "rgb( 255, 0, 0 )";
-    ctx.arc( 2 * x + 100, -2 * y + 100, 5, 0, Math.PI * 2, true );
-    ctx.fill();
 
     //. Canvas => Image
     var png = cvs.toDataURL( 'image/png' );
