add link to new.html(index.html)

--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,10 @@ table{
 
   <div id="result"></div>
  </div>
+
+ <div align="right">
+ Try <a target="_blank" href="./new.html">new one</a>.
+ </div>
 </div>
 </body>
 </html>
