new training.html added as training page

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
-<title>スマホペン</title>
+<title>SPen</title>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="./mqttws31.js"></script>
 <script type="text/javascript">
+var deviceid = null;
+var devicetype = "MyDevice";
+var eventtype = null;
+var test = null;
+var client;
+var pubTopic = 'iot-2/evt/status/fmt/json';
+var phoneData = {};
+phoneData.d = {};
+
 var isTouch = false;
 var touchData = [];
 $(function(){
+  getDeviceId();
+
   if( window.DeviceOrientationEvent ){
     window.addEventListener( "deviceorientation", deviceOrientation );
   }
@@ -18,6 +30,18 @@ $(function(){
     window.addEventListener( "touchstart", touchStart );
     window.addEventListener( "touchend", touchEnd );
   }
+
+  //. 学習用インターフェースを見せるかどうかの識別・判断
+  var bTraining = false;
+  if( !bTraining ){
+    $('.no_display_on_prod').css( 'display', 'none' );
+  }
+
+
+  var clientID = "d:quickstart:" + devicetype + ":" + deviceid;
+  client = new Messaging.Client("quickstart.messaging.internetofthings.ibmcloud.com", 443, clientID );
+  client.onConnectionLost = onConnectionLost;
+  client.connect({onSuccess: onConnect, onFailure: onConnectFailure, useSSL: true});
 });
 
 function touchStart( e ){
@@ -41,25 +65,101 @@ function touchEnd( e ){
     var ctx = cvs.getContext( "2d" );
     ctx.beginPath();
 
+    //. 全体を白でベタ塗り
     ctx.fillStyle = "rgb( 255, 255, 255 )";
     ctx.fillRect( 0, 0, 200, 200 );
 
-    var abg = touchData[0];
-
+    //. 最後のデータ
+    var abg = touchData[touchData.length-1];
     var x = abg['lr'];
     var y = abg['fb'];
-    ctx.moveTo( x + 100 , -1 * y + 100 );
+
+    ctx.beginPath();
+    ctx.fillStyle = "rgb( 255, 0, 0 )";
+    ctx.arc( 2 * x + 100, -2 * y + 100, 10, 0, Math.PI * 2, true );
+    ctx.fill();
+
+    //. 最初のデータ
+    abg = touchData[0];
+    x = abg['lr'];
+    y = abg['fb'];
+
+    ctx.beginPath();
+    ctx.fillStyle = "rgb( 0, 255, 0 )";
+    ctx.arc( 2 * x + 100, -2 * y + 100, 10, 0, Math.PI * 2, true );
+    ctx.fill();
+
+    //. 始点をマーク
+    ctx.beginPath();
+    ctx.strokeStyle = "rgb( 0, 0, 0 )";
+    ctx.lineWidth = 5;
+    ctx.moveTo( 2 * x + 100 , -2 * y + 100 );
+
+    //. ２つ目以降のデータ
     for( var i = 1; i < touchData.length; i ++ ){
-      var abg = touchData[i];
-      var x = abg['lr'];
-      var y = abg['fb'];
-      ctx.lineTo( x + 100 , -1 * y + 100 );
+      abg = touchData[i];
+      x = abg['lr'];
+      y = abg['fb'];
+      ctx.lineTo( 2 * x + 100 , -2 * y + 100 );
     }
     ctx.stroke();
 
     //. Canvas => Image
     var png = cvs.toDataURL( 'image/png' );
     document.getElementById( "resultimg" ).src = png;
+
+    //. 画像データ取得
+    png = png.replace( /^.*,/, '' );
+
+    //. バイナリ変換
+    var bin = atob( png );
+    var buffer = new Uint8Array( bin.length );
+    for( var i = 0; i < bin.length; i ++ ){
+      buffer[i] = bin.charCodeAt( i );
+    }
+    var blob = new Blob( [buffer.buffer], {
+      type: 'image/png'
+    });
+
+    //. POST
+    var formdata = new FormData();
+    formdata.append( 'image', blob );
+
+    if( $('#mlchk').prop( 'checked' ) ){
+      var letter = $('#letter').val();
+      if( letter ){
+        formdata.append( 'letter', letter );
+      }
+    }
+
+    $.ajax({
+      type: "POST",
+      url: "./ocr",
+      data: formdata,
+      contentType: false,
+      processData: false,
+      success: function( data, dataType ){
+        if( letter ){
+          debugText( data );
+        }else{
+          var json = JSON.parse( data );
+          var similar_images = json.similar_images;
+
+          //. 第一候補だけを対象にする場合、
+          var similar_image = similar_images[0];
+          var metadata = similar_image.metadata;
+          var found_letter = metadata.letter;
+          var found_score = similar_image.score;
+          debugAdd( found_letter + "(" + found_score + ")" );
+          textAdd( found_letter );
+
+          publishMessage( found_letter, found_score );
+        }
+      },
+      error: function( jqXHR, textStatus, errorThrown ){
+        debugAdd( textStatus + ": " + errorThrown );
+      }
+    });
 
     touchData = [];
   }
@@ -69,18 +169,111 @@ function deviceOrientation( e ){
   if( isTouch ){
     var gamma = e.gamma; //. Left/Right
     var beta = e.beta;   //. Front/Back
-    var alpha = e.alpha; //. Direction
+    //var alpha = e.alpha; //. Direction
 
     var abg = {};
-    abg['dir'] = alpha;
+    //abg['dir'] = alpha;
     abg['fb'] = beta;
     abg['lr'] = gamma;
     $('#abg_lr').html( gamma );
     $('#abg_fb').html( beta );
-    $('#abg_dir').html( alpha );
+    //$('#abg_dir').html( alpha );
 
     touchData.push( abg );
   } 
+}
+
+function debugText( text ){
+  $('#debug').html( text );
+}
+
+function debugAdd( text ){
+  var msg = $('#debug').html();
+  msg += ( '<br/>' + text );
+  $('#debug').html( msg );
+}
+
+function textAdd( text ){
+  var msg = $('#textarea').html();
+  msg += text;
+  $('#textarea').html( msg );
+}
+
+
+function publishMessage( letter, score ){
+  if( deviceid != null ){
+    var d = {};
+    d['letter'] = letter;
+    d['score'] = score;
+
+    phoneData.d = d;
+    phoneData.publish();
+  }
+}
+
+
+function onConnect() {
+  console.log("Connected");
+}
+function onConnectFailure(error) {
+  console.log("Connect Failed");
+  console.log(error.errorCode);
+  console.log(error.errorMessage);
+}
+function onConnectionLost(response) {
+  console.log("onConnectionLost")
+  if (response.errorCode !== 0) {
+    console.log("onConnectionLost:"+response.errorMessage);
+  }
+  clearInterval(msgInterval);
+  client.connect({onSuccess: onConnect, onFailure: onConnectFailure});
+}
+
+
+phoneData.toJson = function(){
+  return JSON.stringify( this );
+}
+
+phoneData.publish = function(){
+  var message = new Messaging.Message( phoneData.toJson() );
+  message.destinationName = pubTopic;
+  client.send( message );
+}
+
+
+function getDeviceId(){
+  var did = null;
+  cookies = document.cookie.split( "; " );
+  for( i = 0; i < cookies.length; i ++ ){
+    str = cookies[i].split( "=" );
+    if( unescape( str[0] ) == "deviceid" ){
+      did = unescape( unescape( str[1] ) );
+    }
+  }
+  
+  if( did != null ){
+    deviceid = did;
+  }else{
+    deviceid = generateDeviceId();
+    //console.log( "deviceid = " + deviceid );
+  }
+  $('#deviceid').html( deviceid );
+  document.title = deviceid;
+}
+function generateDeviceId(){
+  var did = "";
+  var hx = "0123456789abcdef";
+  for( i = 0; i < 12; i ++ ){
+    var n = Math.floor( Math.random() * 16 );
+    if( n == 16 ){ n = 15; }
+    c = hx.charAt( n );
+    did += c;
+  }
+  
+  var str = "deviceid=" + did;
+  document.cookie = str;
+	
+  return did;
 }
 </script>
 <style type="text/css">
@@ -102,15 +295,27 @@ table{
   width: 100%;
   height: 100%;
 }
+
+textarea{
+  width: 100%;
+  height: 50px;
+}
+
+h3{
+  font-weight: bold;
+  color: #0000ff;
+  text-align: center;
+}
 </style>
 </head>
 <body>
 <div>
- <div style="font-size:8px;" align="right">
- You can download this HTML <a target="_blank" href="https://github.com/dotnsf/SPen/">here</a>.
- </div>
-
  <div>
+  <div class="no_display_on_prod">
+    <input type="checkbox" id="mlchk"/>学習データ<input type="text" size="2" id="letter" value=""/>
+  </div>
+  <h3 id="deviceid">****************</h3>
+
   <table border="1" cellspacing="0" width="100%">
    <thead>
     <tr><th width="50%">Keys</th><th>Values</th></tr>
@@ -118,15 +323,14 @@ table{
    <tbody>
     <tr><td>LR</td><td id="abg_lr">&nbsp;</td></tr>
     <tr><td>FB</td><td id="abg_fb">&nbsp;</td></tr>
-    <tr><td>DIR</td><td id="abg_dir">&nbsp;</td></tr>
    </tbody>
   </table>
 
   <div id="result"></div>
- </div>
-
- <div align="right">
- Try <a target="_blank" href="./new.html">new one</a>.
+  <div>
+    <textarea id="textarea"></textarea>
+  </div>
+  <div class="no_display_on_prod" id="debug"></div>
  </div>
 </div>
 </body>
